--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Jacqueline Quackenbush</title>
 </head>
 <body>
+    <nav>
+        <p>Navbar</p>
+    </nav>
     <div id="intro">
         <h1>Hello! I'm Jacqueline and this is my portfolio!</h1>
     </div>
