create project card class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Hello! I'm Jacqueline and this is my portfolio!</h1>
     </div>
 
-    <div id="projects">
+    <div class="card" id="projects">
         <h1>My Projects</h1>
     </div>
    
